# WutheringWaves_manager

./: README.md  cli.py  core.py  pyproject.toml  run_zmd.sh  wuwa_manager.py
.github/workflows/: publish.yml
